--- a/_config.yml
+++ b/_config.yml
@@ -244,6 +244,13 @@ exclude:
   - package.json
   - package-lock.json
   - _pages/about_einstein.md
+  - _pages/blog.md
+  - _pages/cv.md
+  - _pages/dropdown.md
+  - _pages/news.md
+  - _pages/profiles.md
+  - _pages/projects.md
+  - _pages/repositories.md
   - purgecss.config.js
   - README.md
   - readme_preview/
@@ -313,8 +320,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Guarrasi]
+  first_name: [Valerio]
 
   style: apa
   locale: en
