--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -78,7 +78,7 @@
     - year: 2025
       items:
         - Recipient of “Computing’s Top 30 Early Career Professionals for 2024”, IEEE Computer Society, 2024
-        - Awarded the Seal of Excellence following evaluation by an international panel of independent experts, recognizing it as a high-quality project proposal in a highly competitive selection process. Project Proposal - 101203747 - IDEA “AI-powered digital twin for next-generation lung cancer care”. Submitted under the HORIZON- MSCA-2024-PF-01-01 (MSCA Postdoctoral Fellowships 2024), European Commission Horizon Europe
+        - Awarded the Seal of Excellence. Project Proposal - 101203747 - IDEA “AI-powered digital twin for next-generation lung cancer care”. Submitted under the HORIZON- MSCA-2024-PF-01-01
     - year: 2022
       items:
         - Winner of the international competition - “Covid CXR Hackathon”, Bracco Imaging, Dubai Expo 2020
