--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,9 +19,9 @@
       institution: Sapienza University of Rome, Italy
       year: 2019-2023
       description:
-        - Final Mark: Excellent cum laude
-        - Thesis: “Multimodal Deep Learning for Medical Imaging”
-        - Research Exchange: Department of Radiation Sciences, Umeå University
+        - Final Mark - Excellent cum laude
+        - Thesis - “Multimodal Deep Learning for Medical Imaging”
+        - Research Exchange - Department of Radiation Sciences, Umeå University
     - title: Master's Degree in Data Science
       institution: Sapienza University of Rome, Italy
       year: 2017-2019
